[project]
name = "pxt-d2"
version = "0.1.0"
description = "Pixeltable D2 demo notebooks"
requires-python = ">=3.9"
dependencies = [
    "pixeltable>=0.3.13",
    "torch",
    "transformers",
    "openai>=1.0.0",
    "sentence-transformers>=2.0.0",
    "spacy>=3.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "ipykernel",
]

[tool.uv]
package = false
